--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Hot || Cold</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="styles/reset.css">
+		<link rel="stylesheet" type="text/css" href="styles/style.css">
 		<link href='//fonts.googleapis.com/css?family=Lato:400,700,900,900italic' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
